# src/main/java/com/example/bankcards/dto/response/CreateApplicationResponse.java
@@ -1,0 +1,8 @@
+package com.example.bankcards.dto.response;
+
+import java.util.UUID;
+
+public record CreateApplicationResponse(
+        UUID applicationId
+) {
+}
